--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.164.2) stable; urgency=medium
+
+  * Fix A-OK, Dooya, Somfy and WinDeco meta/error flicker
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Mon, 19 May 2025 18:01:19 +0500
+
 wb-mqtt-serial (2.164.1) stable; urgency=medium
 
   * Fix changelog, no functional changes
