--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.164.3) stable; urgency=medium
+
+  * Fix A-OK, Dooya, Somfy and WinDeco meta/error flicker
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 20 May 2025 11:29:30 +0500
+
 wb-mqtt-serial (2.164.2) stable; urgency=medium
 
   * Refactor test templates features, no functional changes
