--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wb-mqtt-serial (2.164.4) stable; urgency=medium
+
+  * Remove duplicate channel from MAP3H fw2 basic template
+  * Remove duplicate channel from Network module PING2 for Komfovent C3/C4 template
+
+ -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 21 May 2025 10:01:02 +0500
+
 wb-mqtt-serial (2.164.3) stable; urgency=medium
 
   * Fix A-OK, Dooya, Somfy and WinDeco meta/error flicker
