--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wb-mqtt-serial (2.165.0) stable; urgency=medium
+
+  * Add read parameters featute for non-Modbus devices to Device/LoadConfig RPC
+
+ -- Ilya Titov <ilya.titov@wirenboard.com>  Wed, 21 May 2025 13:12:16 +0300
+
 wb-mqtt-serial (2.164.3) stable; urgency=medium
 
   * Fix A-OK, Dooya, Somfy and WinDeco meta/error flicker
